plugins {
	id 'java'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'org.springframework.boot' version '3.2.2'
	id 'com.google.cloud.tools.jib' version '3.1.4' apply(false)
}

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

ext {
	set('snippetsDir', file("build/generated-snippets"))
}

allprojects {
	repositories {
		mavenCentral()
	}
}

dependencies {
	implementation 'org.testng:testng:7.1.0'
}

subprojects {
	group = "intro-me"
	version = "0.0.1-SNAPSHOT"

	apply plugin: 'java'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'
	java.sourceCompatibility = JavaVersion.VERSION_17
	java.targetCompatibility = JavaVersion.VERSION_17
	bootJar.enabled = false
	jar.enabled = true

	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter-web'
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'
		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
		implementation 'org.springframework.boot:spring-boot-devtools'
		implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
	}
}